--- a/ports/nrf/Makefile
+++ b/ports/nrf/Makefile
@@ -198,6 +198,7 @@ SRC_SHARED_C += $(addprefix shared/,\
 	libc/string0.c \
 	readline/readline.c \
 	runtime/pyexec.c \
+	runtime/softtimer.c \
 	runtime/stdout_helpers.c \
 	runtime/sys_stdio_mphal.c \
 	runtime/interrupt_char.c \
@@ -239,6 +240,7 @@ SRC_NRFX += $(addprefix lib/nrfx/drivers/src/,\
 SRC_C += \
 	main.c \
 	mphalport.c \
+	pendsv.c \
 	help.c \
 	gccollect.c \
 	pin_named_pins.c \
